tests/v0-fail/invalid_header.cli
# This is not a valid clitest header
$ echo hello
